--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -13,3 +13,19 @@
     url = {https://www.gnu.org/licenses/gpl-3.0.txt},
     note = "[Online; Accedido 07-Enero-2017]"
 }
+
+@misc{ license:epl,
+    author = "Eclipse Foundation",
+    title = "Eclipse Public License (EPL)",
+    year = "2004",
+    url = {https://www.eclipse.org/legal/epl-v10.html},
+    note = "[Online; Accedido 07-Enero-2017]"
+}
+
+@misc{ license:ccby4,
+    author = "Creative Commons",
+    title = "Attribution 4.0 International (CC BY 4.0)",
+    year = "2016",
+    url = {https://creativecommons.org/licenses/by/4.0/},
+    note = "[Online; Accedido 07-Enero-2017]"
+}
