Document Aspectos Relevantes #103

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -566,8 +566,8 @@
         <![CDATA[
         <b>Version 0.7:</b><br/>
         - Spanish translation.<br/>
-        - Catalan translation<br/>
-        - Arabic translation<br/>
+        - Catalan translation.<br/>
+        - Arabic translation.<br/>
         - Help section.<br/>
         - About GoBees section.<br/>
         - Add Send feedback.<br/>
