Document Especificacion de Requisitos #147

--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -29,3 +29,10 @@
     url = {https://creativecommons.org/licenses/by/4.0/},
     note = "[Online; Accedido 07-Enero-2017]"
 }
+
+@misc{ ieee_830_1998,
+    author = "IEEE",
+	title = {{IEEE} {SA} - 830-1998 - {IEEE} {Recommended} {Practice} for {Software} {Requirements} {Specifications}},
+	url = {https://standards.ieee.org/findstds/standard/830-1998.html},
+	note = "[Online; Accedido 20-Enero-2017]"
+}
