Document Viabilidad Economica #146

--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -36,3 +36,10 @@
 	url = {https://standards.ieee.org/findstds/standard/830-1998.html},
 	note = "[Online; Accedido 20-Enero-2017]"
 }
+
+@misc{ ss_cotizacion,
+    author = "Ministerio de Empleo y Seguridad Social",
+	title = {Bases y tipos de cotización 2016},
+	url = {http://www.seg-social.es/Internet_1/Trabajadores/CotizacionRecaudaci10777/Basesytiposdecotiza36537/index.htm},
+	note = "[Online; Accedido 20-Enero-2017]"
+}
